--- a/sources/MasterTestApp/src/app/core/pages/dashboard/dashboard.component.scss
+++ b/sources/MasterTestApp/src/app/core/pages/dashboard/dashboard.component.scss
@@ -1,6 +1,7 @@
 .dashboard__container {
   height: 100vh;
-  width: 100%, display flex;
+  width: 100%;
+  display: flex;
   justify-content: center;
   align-items: center;
   background-color: #2d2929;
